--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proyecto-integrador-sprint3",
   "version": "1.0.0",
   "description": "Presentable del link al tablero de trabajo del Sprint3 :",
-  "main": "src/app.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
